# CompactDataStructures

./: CMakeLists.txt
cds/: CMakeLists.txt  bit_vector.cpp  bit_vector.h  bit_vector_rank.cpp  bit_vector_rank.h  compressed_bit_vector.cpp  compressed_bit_vector.h  compressed_bit_vector_rank.cpp  compressed_bit_vector_rank.h  dense_pointers.h  direct_access_codes.cpp  direct_access_codes.h  elias_fano_codes.cpp  elias_fano_codes.h  fixed_length_vector.cpp  fixed_length_vector.h  partial_sums.cpp  partial_sums.h  sampled_pointers.cpp  sampled_pointers.h  variable_length_vector.h
cds/variable_length_vector/: base.h  dense_pointers.cpp  dense_pointers.h  direct_access_codes.cpp  direct_access_codes.h  elias_fano_codes.cpp  elias_fano_codes.h  sampled_pointers.cpp  sampled_pointers.h
chapter_02/: get_canonical_huffman_codes.py  get_entropy.py  get_huffman_codes.py  get_integer_codes.py  get_shannon_fano_codes.py
chapter_03/: CMakeLists.txt  bit_array.cpp  bit_vector_sample.cpp  fixed_length_array.cpp  fixed_length_vector_sample.cpp  partial_sums_sample.cpp  sampled_pointers_sample.cpp  variable_length_vector_sample.cpp
chapter_03/cds/: bit_vector.cpp  bit_vector.h  dense_pointers.cpp  fixed_length_vector.cpp  fixed_length_vector.h  sampled_pointers.cpp  sampled_pointers.h
chapter_04/: CMakeLists.txt  compressed_bit_vector_sample.cpp  rank_sample.cpp
